--- a/leetcode-java/.vscode/launch.json
+++ b/leetcode-java/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Solution5",
+            "request": "launch",
+            "mainClass": "string.Solution5",
+            "projectName": "leetcode-java_83a92530"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Solution",
+            "request": "launch",
+            "mainClass": "string.Solution",
+            "projectName": "leetcode-java_83a92530"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Solution",
             "request": "launch",
             "mainClass": "dp.Solution",
